# Open-Switch-Curve-Meter

./: README.md  pyproject.toml  requirements.txt
Force curve measurements/: Cherry-MX-Purple-RGB-1.ods  Cherry-MX-Purple-RGB-2.ods  Futaba-MA-41-Cherry-mount.ods  Gateron-Melodic.ods  README.md
Force curve measurements/Blank templates/: Blank-template-automated.ods
Gen 1 Design/Processing-Python-script/: processing_script.py
Gen 2 Design/: README.md
Gen 2 Design/Atom3D CAD files/: BarrelJack_Horizontal_2.AD_PRT  BarrelJack_Horizontal_3.AD_PRT  C_1206_3216Metric.AD_PRT  C_Disc_D10.5mm_W5.0mm_P5.00mm.AD_PRT  D_SMB.AD_PRT  LED_D5.0mm-4_RGB.AD_PRT  L_0805_2012Metric.AD_PRT  M3-DIN-125-washer.AD_PRT  M3-hex-nut-DIN-934.step  Main-PCB-ArduinoNano 1.AD_ASM  Misumi-HNTAP5-5.AD_PRT  SOT-23-6.AD_PRT  load-cell-protection-bracket.AD_PRT
Gen 2 Design/CAD/: ADC-board-HX711.step  ADC-board-HX711_PCB.AD_PRT  BarrelJack_Horizontal.AD_ASM  BarrelJack_Horizontal_4.AD_PRT  BarrelJack_Horizontal_5.AD_PRT  BarrelJack_Horizontal_6.AD_PRT  Baseplate-stand-2.AD_PRT  D_DO-41_SOD81_P7.62mm_Horizontal.AD_PRT  Force-curve-meter-Gen2.AD_ASM  HFS5-2020-132 v2.AD_PRT  M3-hex-nut-DIN-934.AD_PRT  M3x10-ISO-7380-Torx-T10-screw.AD_PRT  M3x16-ISO-4762-Screw.AD_PRT  M3x6-ISO-7380-Torx-T10-screw.AD_PRT  M3x8-ISO-7380-Torx-T10-screw.AD_PRT  M5x12-ISO-7380-Screw.AD_PRT  M5x8-Screw.AD_PRT  Main-PCB-ArduinoNano.step  Misumi-HFS5-2020-132-TPW.AD_PRT  PinSocket_1x01_P2.54mm_Vertical.AD_PRT  PinSocket_1x07_P2.54mm_Vertical.AD_PRT  R_0805_2012Metric.AD_PRT  (+4 more)
Processing-Python-script/: Processing_script.py
(+42 files in other folders)
