[project]
name = "open-switch-curve-meter"
version = "0.1.0"
description = "Open source keyboard switch force curve tester data processing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "marimo>=0.9.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
